Fix text display position on Safari

--- a/styles/imports/birthday-cake.css
+++ b/styles/imports/birthday-cake.css
@@ -5,11 +5,11 @@
 @import "./connectors.css";
 
 .birthday-cake {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: end;
-  align-items: center;
   height: calc(320 * var(--px));
+  justify-content: end;
   width: calc(256 * var(--px));
 }
 
@@ -20,6 +20,7 @@
 * Browsers: last 20 version
 */
 
+/* prettier-ignore */
 .birthday-cake {
   display: -webkit-box;
   display: -webkit-flex;
@@ -28,16 +29,16 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+  -webkit-justify-content: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   -webkit-box-align: center;
   -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: calc(320 * var(--px));
   width: calc(256 * var(--px));
 }
